# VestigantSpotlight-Gui

./: .gitignore  AFF4_RUN_REVIEW_0202_0024_IT003_V1_6_82_CACHE_TEXT.txt  AFF4_RUN_REVIEW_0202_0024_IT003_V1_6_83_GUI_CACHE_PARENT_CHAIN.txt  BUILD_INSTRUCTIONS.md  Build-V1_6_101-FromDownloadedZip.ps1  Build-V1_6_115-FromDownloadedZip.ps1  Build-V1_6_77-FromDownloadedZip.ps1  Build-V1_6_87-FromDownloadedZip.ps1  BuildAndRun-V1_6_115-FromDownloadedZip.ps1  BuildAndRun-V1_6_119-FromDownloadedZip.ps1  BuildAndRun-V1_6_77-FromDownloadedZip.ps1  BuildAndRunAff4Probe-V1_6_119-FromDownloadedZip.ps1  BuildAndRunAff4Probe-V1_6_72-FromDownloadedZip.ps1  BuildAndRunAff4Probe-V1_6_77-FromDownloadedZip.ps1  BuildAndRunAff4Probe-V1_6_87-FromDownloadedZip.ps1  BuildAndRunThin-V1_6_102-FromDownloadedZip.ps1  BuildAndRunThin-V1_6_119-FromDownloadedZip.ps1  BuildAndRunThin-V1_6_72-FromDownloadedZip.ps1  BuildAndRunThin-V1_6_77-FromDownloadedZip.ps1  BuildAndRunThin-V1_6_87-FromDownloadedZip.ps1  CMakeLists.txt  CONSOLIDATED_VERSION_HISTORY.md  Export-PortableReleaseZip_V1_6_119.ps1  HELP.md  HOTFIX_AFF4_UPLOAD_PACKAGING_NOTES.md  KNOWN_ISSUES.md  Launch-V1_6_101-GUI.ps1  Launch-V1_6_102-GUI.ps1  Launch-V1_6_72-GUI.ps1  Launch-V1_6_77-GUI.ps1  POWERSHELL_COMMANDS_V1_6_102.txt  POWERSHELL_COMMANDS_V1_6_72.txt  POWERSHELL_COMMANDS_V1_6_77.txt  POWERSHELL_COMMANDS_V1_6_87.txt  README.md  RELEASE_NOTES.md  Run-SingleAff4SourceProbeAndZip_V1_6_101.ps1  Run-SingleAff4SourceProbeAndZip_V1_6_102.ps1  Run-SingleAff4SourceProbeAndZip_V1_6_115.ps1  Run-SingleAff4SourceProbeAndZip_V1_6_119.ps1  (+101 more)
.github/: pull_request_template.md
docs/: ACTIVE_FILESYSTEM_COMPARISON_ROADMAP.md  APFS_TRAVERSAL_CONSOLIDATION_PLAN.md  BUILD_NOTES.md  BaselineVersionHistory.md  CONSOLIDATED_DEVELOPMENT_NOTES.md  CONSOLIDATED_USER_MANUAL.md  CONSOLIDATED_VERSION_HISTORY.md  CONTINUATION_HANDOFF.md  DETAILED_ROADMAP_AND_TESTING_TIMELINE.md  EVIDENCE_SOURCE_STAGING_ROADMAP.md  EVIDENCE_SOURCE_STAGING_WORKFLOW.md  FILESYSTEM_INVENTORY_SQLITE_PLAN.md  FORENSIC_ROADMAP_MACOS_IOS_V0_8_74.md  FORENSIC_ROADMAP_MACOS_IOS_V0_8_75.md  FULL_VERSION_HISTORY.md  GITHUB_PROJECT_SETUP.md  GUARDRAIL_RETIREMENT_PLAN.md  GUI_DATABASE_ACCESS_AUDIT_V1_3_0.md  GUI_DATABASE_ACCESS_AUDIT_V1_3_2.md  INTERACTIONC_WORKFLOW.md  IOS_CORESPOTLIGHT_ROADMAP.md  IOS_INVESTIGATION_VALIDATION_WORKFLOW.md  MACOS_INVESTIGATIVE_FEATURES_CURRENT_AND_ROADMAP.md  NEW_CHAT_CONTINUATION_GUIDE.md  PACKAGE_CLEANUP_MANIFEST.json  PACKAGE_CLEANUP_SUMMARY.md  PROJECT_REFERENCE_V1_6_101.md  PROJECT_REFERENCE_V1_6_102.md  PROJECT_REFERENCE_V1_6_115.md  PROJECT_REFERENCE_V1_6_119.md  PROJECT_REFERENCE_V1_6_72.md  PROJECT_REFERENCE_V1_6_77.md  PROJECT_REFERENCE_V1_6_87.md  PROJECT_ROADMAP_AND_CONTINUATION.md  QUICK_START.md  README.md  ROADMAP_CHECKLIST.md  SOURCE_DOCS_SCRIPTS_REVIEW_V1_1_10.csv  SOURCE_DOCS_SCRIPTS_REVIEW_V1_1_10.md  SOURCE_DOCS_SCRIPTS_REVIEW_V1_1_10_1.csv  (+136 more)
scripts/: Build-And-Run-V0_9_11_1-iOS-GUI.ps1  Build-And-Run-V0_9_17-iOS-GUI.ps1  Build-And-Run-V0_9_19-iOS-GUI.ps1  Build-And-Run-V0_9_21-iOS-GUI.ps1  Build-And-Run-V0_9_22-iOS-GUI.ps1  Build-And-Run-V0_9_24-iOS-GUI.ps1  Build-And-Run-V0_9_25-iOS-GUI.ps1  Build-And-Run-V0_9_26_2-iOS-GUI.ps1  Build-And-Run-V0_9_27-iOS-GUI.ps1  Build-And-Run-V0_9_28-iOS-GUI.ps1  Build-And-Run-V0_9_30-iOS-GUI.ps1  Build-And-Run-V0_9_31-iOS-GUI.ps1  Build-And-Run-V0_9_32-iOS-GUI.ps1  Build-And-Run-V0_9_33-iOS-GUI.ps1  Build-And-Run-V0_9_34-iOS-GUI.ps1  Build-And-Run-V0_9_36-iOS-GUI.ps1  Build-And-Run-V0_9_38-iOS-GUI.ps1  Build-And-Run-V0_9_40-iOS-GUI.ps1  Build-And-Run-V0_9_42-iOS-GUI.ps1  Build-And-Run-V0_9_43-iOS-GUI.ps1  Build-And-Run-V0_9_46-iOS-GUI.ps1  Build-And-Run-V0_9_47-iOS-GUI.ps1  Build-And-Run-V0_9_48-iOS-GUI.ps1  Build-And-Run-V0_9_53-iOS-GUI.ps1  Build-And-Run-V0_9_57-iOS-GUI.ps1  Build-And-Run-V0_9_59-iOS-GUI.ps1  Build-And-Run-V0_9_6-iOS-GUI.ps1  Build-And-Run-V0_9_60-iOS-GUI.ps1  Build-V0_9_11_1.ps1  Build-V0_9_17.ps1  Build-V0_9_18.ps1  Build-V0_9_21.ps1  Build-V0_9_22.ps1  Build-V0_9_24.ps1  Build-V0_9_25.ps1  Build-V0_9_26_1.ps1  Build-V0_9_27.ps1  Build-V0_9_28.ps1  Build-V0_9_30.ps1  Build-V0_9_31.ps1  (+681 more)
sql/: evidence_sources_schema.sql  filesystem_inventory_schema.sql
src/app/: app_runner.h  (+4 more)
tests/: main.cpp  sql_recursion_test.cpp  sql_recursion_test.h
tools/: Build-Aff4CppLite-VS2022.ps1  Collect-iOSCoreSpotlightQuickDiagnostics.ps1  Compare-ExternalSpotlightReference.ps1  Create-ApfsRemainingMismatchDiagnostics.ps1  Create-SourceProbeUploadZip.ps1  Create-UploadZip.ps1  Export-PortableReleaseZip.ps1  Extract-IosCoreSpotlightFromZips.ps1  Extract-iOSCoreSpotlightFromFFSZips.ps1  Generate-ThinPerformanceSummary.ps1  Prepare-LzfseThirdParty.ps1  Probe-Aff4DirectMapScan.ps1  Run-CppStaticAnalysis.ps1  Run-IosCoreSpotlightFocusedZip.ps1  Run-SingleAff4SourceProbeAndZip.ps1  Run-iOSCoreSpotlightFocusedAndZip.ps1  Search-SpotlightKeywordExports.ps1  Stage-EvidenceSource.ps1  Stage-PortableRelease.ps1  Verify-ExportViewQueries.ps1  Verify-MsvcStringLiteralRisk.ps1  Verify-PortableReleaseLayout.ps1  Verify-PowerShellWrapperCompatibility.ps1  Verify-ProductionReadiness.ps1  Verify-ReleaseVersionConsistency.ps1  Verify-SpotlightExternalVolumePrecision.ps1  Verify-ThinIdentifierCsvPrecision.ps1  Verify-V1_3_7-RequestedFixes.ps1  Verify-V1_6_0-ReleaseReadiness.ps1  Verify-V1_6_17-ForensicDirectives.ps1  (+27 more)
(+150 files in other folders)
